--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,4 +20,8 @@ dependencies = [
     "pip>=25.2",
     "spacy-conll>=4.0.1",
     "tqdm>=4.67.1",
+    "pandas>=2.3.2",
+    "pandas-stubs==2.3.0.250703",
+    "sapling-py>=4.0.2",
+    "marimo>=0.15.0",
 ]
