--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,42 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "bs4>=0.0.2",
     "dspy>=3.0.0",
-    "jupyter>=1.1.1",
     "lxml>=6.0.0",
-    "markdownify>=1.2.0",
     "polars>=1.32.3",
     "pyarrow>=21.0.0",
     "python-dotenv>=1.1.1",
     "requests>=2.32.5",
     "stanza>=1.10.1",
     "openai==1.99.5",
-    "spacy>=3.8.7",
     "pip>=25.2",
-    "spacy-conll>=4.0.1",
     "tqdm>=4.67.1",
+    "marimo>=0.15.0",
+    "rich>=14.1.0",
+    "typer>=0.16.1",
+    "duckdb>=1.4.2",
+    "sacremoses>=0.1.1",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "bs4>=0.0.2",
+    "jupyter>=1.1.1",
+    "markdownify>=1.2.0",
+    "modal>=1.2.2",
     "pandas>=2.3.2",
     "pandas-stubs==2.3.0.250703",
-    "sapling-py>=4.0.2",
-    "marimo>=0.15.0",
+    "pytest>=9.0.1",
 ]
+
+[tool.pytest.ini_options]
+markers = [
+    "integration: marks tests as integration tests that require API keys (deselect with '-m \"not integration\"')",
+]
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/insl"]
