--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   marimo-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: correlaid/cdl-insl
     ports:
       - "8080:8080"
     environment:
